Gaphique: Fixation du footer
+ indentation code html

--- a/styleBlackJackJo.css
+++ b/styleBlackJackJo.css
@@ -170,6 +170,9 @@ figure:hover {
 }
 
 footer {
+	position: absolute;
+  	bottom: 0;
+	width: 100%;
 	height: 1.5em;
 	font-size: 1em;
 	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -177,7 +180,8 @@ footer {
 	text-shadow: rgb(5, 2, 39) 2px 3px;
 	text-align: center;
 
-
+	margin-block-start: 0em;
+    margin-block-end: 0em;
 
 
 	background: rgb(130,14,39);
